# Security-Suite

./: .gitignore  APK_DOWNLOAD_SETUP.md  BUILD_SUITE.sh  ProductBacklog.json  QUICKSTART.md  README.md  requirements.txt  start_bot.sh  telegram_bot.py
tools/apk-analyzer/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
tools/apk-analyzer/apkslayer/: __init__.py  cli.py  exploitability.py  patterns.py  report.py  scanner.py  utils.py
tools/apk-analyzer/apkslayer/analysis/: __init__.py  attack_vectors.py  reachability.py
tools/apk-analyzer/apkslayer/crawler/: __init__.py  blogs.py  cache.py  extractor.py  hackerone.py  sources.py  updater.py
tools/apk-analyzer/apkslayer/deep_analysis/: __init__.py  engine.py  intent.py  provider.py  webview.py
tools/apk-analyzer/apkslayer/dynamic/: __init__.py  config.py  exceptions.py  executor.py  genymotion.py  monitor.py  report.py
tools/apk-analyzer/apkslayer/dynamic/automation/: __init__.py  element_finder.py  form_filler.py  navigator.py
tools/apk-analyzer/apkslayer/dynamic/device/: __init__.py  adb_device.py  base.py  factory.py  uiautomator_device.py
tools/apk-analyzer/apkslayer/dynamic/instrumentation/: __init__.py  frida_manager.py  script_runner.py
tools/apk-analyzer/apkslayer/dynamic/traffic/: __init__.py  analyzer.py  cert_installer.py  proxy.py
tools/apk-analyzer/apkslayer/dynamic/verification/: __init__.py  base.py  deeplink.py  intent.py  provider.py  webview.py
tools/apk-analyzer/apkslayer/patterns/: __init__.py  loader.py  manager.py  models.py  validator.py
tools/apk-analyzer/apkslayer/visualizer/: __init__.py  analyzer.py  graphs.py  renderer.py
tools/apk-analyzer/data/builtin/: patterns.json
(+69 files in other folders)
